# fantasy-football

./: .gitignore  README.md  Taskfile.yaml  base.py  db.py  main.py  pyproject.toml  schema.py
.github/workflows/: checks.yml
backend/: .eslintrc.json  Taskfile.yaml  package-lock.json  package.json
backend/src/: index.js
frontend/: .eslintrc.json  Taskfile.yaml  package-lock.json  package.json
frontend/src/: App.js  index.css  index.js  reportWebVitals.js
scraper/: Taskfile.yaml  fantasypros.py  schema.py
