[project]
name = "fantasy-football"
version = "0.1.0"
description = "A web scraper for fantasy football ranking and analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.23",
    "boto3-stubs[dynamodb]>=1.38.23",
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "selenium~=4.33.0",
]
